--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,8 +14,11 @@
   <div class="max-w-6xl mx-auto px-4 py-0 flex items-center justify-between">
     <!-- LOGO -->
     <div class="flex items-center gap-2">
-      <img src="https://res.cloudinary.com/dk5bqpodg/image/upload/v1756747292/smartalk_banner_ke1kkq.svg"
-           alt="Smartalk Logo" class="h-8">
+      <a href="https://www.smartalk.online" target="_blank" rel="noopener noreferrer"
+         class="flex items-center gap-2 cursor-pointer hover:opacity-80 transition-opacity duration-200 z-50">
+        <img src="https://res.cloudinary.com/dk5bqpodg/image/upload/v1756747292/smartalk_banner_ke1kkq.svg"
+             alt="Smartalk Logo" class="h-8">
+      </a>
     </div>
 
     <!-- NAVIGATION -->
