--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,7 +11,7 @@
   
 <!-- HEADER NAV -->
 <header id="mainHeader" class="w-full bg-white shadow-md fixed top-0 left-0 z-50">
-  <div class="max-w-6xl mx-auto px-4 py-0 flex items-center justify-between">
+  <div class="max-w-6xl mx-auto px-4 py-2.5 flex items-center justify-between">
     <!-- LOGO -->
     <div class="flex items-center gap-2">
       <a href="https://www.smartalk.online" target="_blank" rel="noopener noreferrer"
@@ -288,7 +288,7 @@
   </div>
   <button id="backToDashboardFromDebriefBtn"
     class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500 transition">
-    ← Back to Dashboard
+    Back to Dashboard
   </button>
 </div>
 <!-- META INFO -->
