--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,25 +11,25 @@
   
 <!-- HEADER NAV -->
 <header id="mainHeader" class="w-full bg-white shadow-md fixed top-0 left-0 z-50">
-  <div class="max-w-6xl mx-auto px-4 py-2.5 flex items-center justify-between">
+  <div class="max-w-6xl mx-auto px-6 py-3 flex items-center justify-between">
     <!-- LOGO -->
-    <div class="flex items-center gap-2">
+    <div class="flex items-center gap-3">
       <a href="https://www.smartalk.online" target="_blank" rel="noopener noreferrer"
-         class="flex items-center gap-2 cursor-pointer hover:opacity-80 transition-opacity duration-200 z-50">
+         class="flex items-center gap-3 cursor-pointer hover:opacity-80 transition-opacity duration-200">
         <img src="https://res.cloudinary.com/dk5bqpodg/image/upload/v1756747292/smartalk_banner_ke1kkq.svg"
-             alt="Smartalk Logo" class="h-8">
+             alt="Smartalk Logo" class="h-10 md:h-12">
       </a>
     </div>
 
     <!-- NAVIGATION -->
-    <nav class="flex flex-wrap gap-4 text-sm font-medium text-gray-700">
-      <button onclick="switchSection(dashboardSection)" class="hover:text-blue-600">Dashboard</button>
-      <button onclick="switchSection(coachingDebriefSection)" class="hover:text-blue-600">Debrief</button>
-      <button onclick="switchSection(callSection)" class="hover:text-blue-600">Log Call</button>
-      <button onclick="switchSection(callHistorySection)" class="hover:text-blue-600">Call History</button>
-      <button onclick="switchSection(studentsSection)" class="hover:text-blue-600">Students</button>
-      <button onclick="switchSection(reportCardsSection)" class="hover:text-blue-600">Report Cards</button>
-      <button onclick="switchSection(flashcardsSection)" class="hover:text-blue-600">Flashcards</button>
+    <nav class="flex flex-wrap gap-6 text-base md:text-lg font-semibold text-gray-700">
+      <button onclick="switchSection(dashboardSection)" class="hover:text-blue-600 transition-colors">Dashboard</button>
+      <button onclick="switchSection(coachingDebriefSection)" class="hover:text-blue-600 transition-colors">Debrief</button>
+      <button onclick="switchSection(callSection)" class="hover:text-blue-600 transition-colors">Log Call</button>
+      <button onclick="switchSection(callHistorySection)" class="hover:text-blue-600 transition-colors">Call History</button>
+      <button onclick="switchSection(studentsSection)" class="hover:text-blue-600 transition-colors">Students</button>
+      <button onclick="switchSection(reportCardsSection)" class="hover:text-blue-600 transition-colors">Report Cards</button>
+      <button onclick="switchSection(flashcardsSection)" class="hover:text-blue-600 transition-colors">Flashcards</button>
     </nav>
   </div>
 </header>
