--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -17,12 +17,12 @@
       <a href="https://www.smartalk.online" target="_blank" rel="noopener noreferrer"
          class="flex items-center gap-3 cursor-pointer hover:opacity-80 transition-opacity duration-200">
         <img src="https://res.cloudinary.com/dk5bqpodg/image/upload/v1756747292/smartalk_banner_ke1kkq.svg"
-             alt="Smartalk Logo" class="h-10 md:h-10">
+             alt="Smartalk Logo" class="h-10 md:h-11">
       </a>
     </div>
 
     <!-- NAVIGATION -->
-    <nav class="flex flex-wrap gap-6 text-base md:text-lg font-semibold text-gray-700">
+    <nav class="flex flex-wrap gap-6 text-sm md:text-base font-semibold text-gray-700">
       <button onclick="switchSection(dashboardSection)" class="hover:text-blue-600 transition-colors">Dashboard</button>
       <button onclick="switchSection(coachingDebriefSection)" class="hover:text-blue-600 transition-colors">Debrief</button>
       <button onclick="switchSection(callSection)" class="hover:text-blue-600 transition-colors">Log Call</button>
