--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -125,6 +125,10 @@
         <span class="text-4xl">🧑‍🎓</span>
         <p class="mt-2 text-lg font-semibold">Students</p>
       </button>
+      <button id="viewTeachingMaterialsBtn" class="cube-button bg-indigo-500 text-white">
+        <span class="text-4xl">📚</span>
+        <p class="mt-2 text-lg font-semibold">Teaching Materials</p>
+      </button>
       <button id="viewFlashcardsBtn" class="cube-button bg-pink-600 text-white">
         <span class="text-4xl">🃏</span>
         <p class="mt-2 text-lg font-semibold">Flashcards</p>
@@ -133,10 +137,6 @@
         <span class="text-4xl">📂</span>
         <p class="mt-2 text-lg font-semibold">My payment folder</p>
       </button>
-      <div id="bulletinBoard" class="cube-button bg-yellow-400 text-gray-800 cursor-default">
-        <span class="text-4xl">📢</span>
-        <p class="mt-2 text-lg font-semibold">Bulletin Board</p>
-      </div>
 
       <!-- 3ª riga -->
       <div id="monthlyEarningsDisplay" class="cube-button bg-blue-600 text-white lg:col-span-2 cursor-default">
@@ -145,6 +145,12 @@
           <span id="earningsAmount">--</span>€
         </p>
       </div>
+      <div id="bulletinBoard" class="cube-button bg-yellow-400 text-gray-800 cursor-default">
+        <span class="text-4xl">📢</span>
+        <p class="mt-2 text-lg font-semibold">Bulletin Board</p>
+      </div>
+
+       <!-- 4ª riga -->
       <div id="calendarPlaceholder" class="cube-button bg-slate-200 text-gray-700 lg:col-span-2 cursor-default">
         <span class="text-5xl">📅</span>
         <p class="mt-4 text-lg font-semibold">Calendar (Coming soon)</p>
