--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -633,6 +633,27 @@
     <p class="text-gray-500">Select a student to load flashcards.</p>
   </div>
 </div>
+
+ <!-- TEACHING MATERIAL SECTION -->
+<div id="teachingMaterialsSection" class="hidden app-section">
+  <div class="flex justify-between items-center mb-8 border-b border-gray-200 pb-3">
+    <div class="flex items-center gap-3">
+      <span class="text-3xl">📚</span>
+      <h2 class="text-2xl font-semibold text-gray-800">Teaching Materials</h2>
+    </div>
+    <button id="backToDashboardFromTeachingBtn"
+      class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500 transition">
+      Back to Dashboard
+    </button>
+  </div>
+
+  <div class="space-y-6">
+    <h3 class="text-xl font-semibold text-gray-700">Lesson Plans</h3>
+    <h3 class="text-xl font-semibold text-gray-700">Homework Files</h3>
+  </div>
+</div>
+
+  
 </main>
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="scripts/dashboard.js"></script>
