--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -29,6 +29,7 @@
       <button onclick="switchSection(callHistorySection)" class="hover:text-blue-600 transition-colors">Call History</button>
       <button onclick="switchSection(studentsSection)" class="hover:text-blue-600 transition-colors">Students</button>
       <button onclick="switchSection(reportCardsSection)" class="hover:text-blue-600 transition-colors">Report Cards</button>
+      <button onclick="switchSection(teachingMaterialsSection)" class="hover:text-blue-600 transition-colors">Teaching Materials</button>
       <button onclick="switchSection(flashcardsSection)" class="hover:text-blue-600 transition-colors">Flashcards</button>
     </nav>
   </div>
