--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -138,7 +138,6 @@
         <span class="text-4xl">📂</span>
         <p class="mt-2 text-lg font-semibold">My payment folder</p>
       </button>
-
       <!-- 3ª riga -->
       <div id="monthlyEarningsDisplay" class="cube-button bg-blue-600 text-white lg:col-span-2 cursor-default">
         <p class="text-lg font-medium opacity-80">Monthly Earnings</p>
@@ -146,13 +145,12 @@
           <span id="earningsAmount">--</span>€
         </p>
       </div>
-      <div id="bulletinBoard" class="cube-button bg-yellow-400 text-gray-800 cursor-default">
+      <div id="bulletinBoard" class="cube-button bg-yellow-400 text-gray-800 cursor-default lg:col-span-2">
         <span class="text-4xl">📢</span>
         <p class="mt-2 text-lg font-semibold">Bulletin Board</p>
       </div>
-
-       <!-- 4ª riga -->
-      <div id="calendarPlaceholder" class="cube-button bg-slate-200 text-gray-700 lg:col-span-2 cursor-default">
+      <!-- 4ª riga -->
+      <div id="calendarPlaceholder" class="cube-button bg-slate-200 text-gray-700 lg:col-span-4 cursor-default">
         <span class="text-5xl">📅</span>
         <p class="mt-4 text-lg font-semibold">Calendar (Coming soon)</p>
       </div>
