--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,7 +11,7 @@
   
 <!-- HEADER NAV -->
 <header id="mainHeader" class="w-full bg-white shadow-md fixed top-0 left-0 z-50">
-  <div class="max-w-6xl mx-auto flex items-center justify-between px-6 py-3">
+  <div class="w-full flex items-center justify-between px-6 py-2">
     
     <!-- LOGO SX -->
     <a href="https://www.smartalk.online" target="_blank" rel="noopener noreferrer"
@@ -21,7 +21,7 @@
     </a>
 
     <!-- NAV DX -->
-    <nav class="hidden md:flex flex-wrap gap-6 text-sm md:text-base font-semibold text-gray-700">
+    <nav class="flex flex-wrap gap-6 text-sm md:text-base font-semibold text-gray-700">
       <button onclick="switchSection(dashboardSection)" class="hover:text-blue-600 transition-colors">Dashboard</button>
       <button onclick="switchSection(coachingDebriefSection)" class="hover:text-blue-600 transition-colors">Debrief</button>
       <button onclick="switchSection(callSection)" class="hover:text-blue-600 transition-colors">Log Call</button>
@@ -34,6 +34,7 @@
 
   </div>
 </header>
+
 
 
 <!-- spacer per non far coprire il contenuto -->
