--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -672,7 +672,7 @@
   if (css) css.href = `styles/dashboard.css?v=${ts}`;
   // inserisci JS nuovo
   const js = document.createElement('script');
-  js.src = `scripts/dashboard.js?v=${ts}`;
+  js.src = `scripts/dashboard2.js?v=${ts}`;
   document.body.appendChild(js);
 </script>
 </body>
