--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -290,7 +290,7 @@
   </div>
 </div>
   
-<!-- COACHING DEBRIEF -->
+<!-- 💬 COACHING DEBRIEF -->
 <div id="coachingDebriefSection" class="hidden app-section">
   <div class="bg-white p-8 rounded-2xl shadow-xl border border-gray-200">
 
@@ -301,163 +301,180 @@
         <h2 class="text-2xl font-semibold text-gray-800">Coaching Debrief</h2>
       </div>
       <button id="backToDashboardFromDebriefBtn"
-        class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500">
+        class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500 transition">
         Back to Dashboard
       </button>
     </div>
 
-    <!-- META (Student / Date) -->
+    <!-- META INFO -->
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
       <div>
-        <label for="debriefStudentSelect" class="block text-sm font-medium text-gray-700 mb-1">Student</label>
+        <label for="debriefStudentSelect" class="block text-sm font-semibold text-gray-700 mb-1">Student</label>
         <select id="debriefStudentSelect" class="form-input">
           <option value="" disabled selected>Select a student</option>
         </select>
       </div>
       <div>
-        <label for="debriefDateInput" class="block text-sm font-medium text-gray-700 mb-1">Date</label>
+        <label for="debriefDateInput" class="block text-sm font-semibold text-gray-700 mb-1">Date</label>
         <input id="debriefDateInput" type="date" class="form-input" />
       </div>
     </div>
 
-    <!-- 2-COLUMN BOARD -->
+    <!-- MAIN GRID -->
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
 
-      <!-- LEFT -->
+      <!-- LEFT COLUMN -->
       <div class="space-y-6">
-        <!-- Goals -->
-        <div class="bg-gray-50 rounded-xl p-4 border">
+        <!-- GOALS -->
+        <div class="bg-gray-50 rounded-xl p-4 border border-gray-200">
           <div class="flex items-center justify-between mb-2">
-            <h3 class="font-semibold text-gray-800">Session Goals</h3>
-            <div class="flex gap-2">
-              <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded"
-                      data-ai-preview="goals">AI Preview</button>
-            </div>
+            <h3 class="font-semibold text-gray-800">Goals</h3>
+            <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded" data-ai-preview="goals">
+              AI Preview
+            </button>
           </div>
-          <textarea id="debrief_goals" class="form-textarea" rows="5" disabled></textarea>
+          <textarea id="debrief_goals" class="form-textarea" rows="5"></textarea>
           <div id="aiPreview_goals" class="hidden mt-3"></div>
         </div>
 
-        <!-- Topics -->
-        <div class="bg-gray-50 rounded-xl p-4 border">
+        <!-- TOPICS -->
+        <div class="bg-gray-50 rounded-xl p-4 border border-gray-200">
           <div class="flex items-center justify-between mb-2">
-            <h3 class="font-semibold text-gray-800">Hot Topics</h3>
-            <div class="flex gap-2">
-              <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded"
-                      data-ai-preview="topics">AI Preview</button>
-            </div>
+            <h3 class="font-semibold text-gray-800">Topics</h3>
+            <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded" data-ai-preview="topics">
+              AI Preview
+            </button>
           </div>
-          <textarea id="debrief_topics" class="form-textarea" rows="5" disabled></textarea>
+          <textarea id="debrief_topics" class="form-textarea" rows="5"></textarea>
           <div id="aiPreview_topics" class="hidden mt-3"></div>
+        </div>
+
+        <!-- GRAMMAR -->
+        <div class="bg-gray-50 rounded-xl p-4 border border-gray-200">
+          <div class="flex items-center justify-between mb-2">
+            <h3 class="font-semibold text-gray-800">Grammar</h3>
+            <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded" data-ai-preview="grammar">
+              AI Preview
+            </button>
+          </div>
+          <textarea id="debrief_grammar" class="form-textarea" rows="4"></textarea>
+          <div id="aiPreview_grammar" class="hidden mt-3"></div>
         </div>
       </div>
 
-      <!-- RIGHT -->
+      <!-- RIGHT COLUMN -->
       <div class="space-y-6">
-        <!-- Grammar -->
-        <div class="bg-gray-50 rounded-xl p-4 border">
-          <div class="flex items-center justify-between mb-2">
-            <h3 class="font-semibold text-gray-800">Grammar</h3>
-            <div class="flex gap-2">
-              <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded"
-                      data-ai-preview="grammar">AI Preview</button>
-            </div>
-          </div>
-          <textarea id="debrief_grammar" class="form-textarea" rows="4" disabled></textarea>
-          <div id="aiPreview_grammar" class="hidden mt-3"></div>
-        </div>
-
-        <!-- Vocabulary -->
-        <div class="bg-gray-50 rounded-xl p-4 border">
+        <!-- VOCABULARY -->
+        <div class="bg-gray-50 rounded-xl p-4 border border-gray-200">
           <div class="flex items-center justify-between mb-2">
             <h3 class="font-semibold text-gray-800">Vocabulary</h3>
             <div class="flex gap-2">
               <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded"
-                      data-ai-preview="vocabulary">AI Preview</button>
+                data-ai-preview="vocabulary">AI Preview</button>
+              <button id="debriefGenerateFlashcardsBtn"
+                class="px-3 py-1 text-xs bg-emerald-600 hover:bg-emerald-700 text-white rounded">
+                🃏 Flashcards
+              </button>
             </div>
           </div>
-          <textarea id="debrief_vocabulary" class="form-textarea" rows="4" disabled></textarea>
+          <textarea id="debrief_vocabulary" class="form-textarea" rows="4"></textarea>
           <div id="aiPreview_vocabulary" class="hidden mt-3"></div>
         </div>
 
-        <!-- Pronunciation -->
-        <div class="bg-gray-50 rounded-xl p-4 border">
+        <!-- PRONUNCIATION -->
+        <div class="bg-gray-50 rounded-xl p-4 border border-gray-200">
           <div class="flex items-center justify-between mb-2">
             <h3 class="font-semibold text-gray-800">Pronunciation</h3>
-            <div class="flex gap-2">
-              <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded"
-                      data-ai-preview="pronunciation">AI Preview</button>
-            </div>
+            <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded"
+              data-ai-preview="pronunciation">AI Preview</button>
           </div>
-          <textarea id="debrief_pronunciation" class="form-textarea" rows="4" disabled
-            placeholder="Parole su cui lavorare, una per riga."></textarea>
+          <textarea id="debrief_pronunciation" class="form-textarea" rows="4"></textarea>
           <div id="aiPreview_pronunciation" class="hidden mt-3"></div>
         </div>
+
+        <!-- HOMEWORK -->
+        <div class="bg-gray-50 rounded-xl p-4 border border-gray-200">
+          <div class="flex items-center justify-between mb-2">
+            <h3 class="font-semibold text-gray-800">Homework</h3>
+            <div class="flex gap-2">
+              <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded"
+                data-ai-preview="homework">AI Preview</button>
+              <button id="debriefGeneratePlanBtn"
+                class="px-3 py-1 text-xs bg-indigo-600 hover:bg-indigo-700 text-white rounded">
+                ✨ Generate Plan
+              </button>
+            </div>
+          </div>
+          <textarea id="debrief_homework" class="form-textarea" rows="5"></textarea>
+          <div id="aiPreview_homework" class="hidden mt-3"></div>
+        </div>
+
+        <!-- OTHER NOTES -->
+        <div class="bg-gray-50 rounded-xl p-4 border border-gray-200">
+          <div class="flex items-center justify-between mb-2">
+            <h3 class="font-semibold text-gray-800">Other Notes</h3>
+            <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded" data-ai-preview="other">
+              AI Preview
+            </button>
+          </div>
+          <textarea id="debrief_other" class="form-textarea" rows="5"></textarea>
+          <div id="aiPreview_other" class="hidden mt-3"></div>
+        </div>
       </div>
     </div>
 
-    <!-- ROW 2 -->
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-6">
-      <!-- Homework -->
-      <div class="bg-gray-50 rounded-xl p-4 border">
-        <div class="flex items-center justify-between mb-2">
-          <h3 class="font-semibold text-gray-800">Homework</h3>
-          <div class="flex gap-2">
-            <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded"
-                    data-ai-preview="homework">AI Preview</button>
-            <button id="debriefGeneratePlanBtn"
-                    class="px-3 py-1 text-xs bg-indigo-600 hover:bg-indigo-700 text-white rounded">✨ Generate Future Plan</button>
-          </div>
-        </div>
-        <textarea id="debrief_homework" class="form-textarea" rows="5" disabled></textarea>
-        <div id="aiPreview_homework" class="hidden mt-3"></div>
-      </div>
+    <!-- ACTION BAR -->
+    <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-3 mt-8 border-t pt-4">
+      <!-- LEFT: Load drafts -->
+      <button id="debriefLoadDraftsBtn"
+        class="bg-gray-200 text-gray-800 font-semibold py-2 px-4 rounded-xl hover:bg-gray-300">
+        💾 Load Drafts
+      </button>
 
-      <!-- Other -->
-      <div class="bg-gray-50 rounded-xl p-4 border">
-        <div class="flex items-center justify-between mb-2">
-          <h3 class="font-semibold text-gray-800">Other / Notes</h3>
-          <div class="flex gap-2">
-            <button class="px-3 py-1 text-xs bg-blue-600 hover:bg-blue-700 text-white rounded"
-                    data-ai-preview="other">AI Preview</button>
-            <button id="debriefGenerateFlashcardsBtn"
-                    class="px-3 py-1 text-xs bg-emerald-600 hover:bg-emerald-700 text-white rounded">🃏 Generate Flashcards</button>
-          </div>
-        </div>
-        <textarea id="debrief_other" class="form-textarea" rows="5" disabled></textarea>
-        <div id="aiPreview_other" class="hidden mt-3"></div>
-      </div>
-    </div>
-
-    <!-- ACTIONS -->
-    <div class="flex flex-col md:flex-row md:items-center gap-3 mt-8">
-      <div class="flex-1">
-        <button id="debriefLoadDraftsBtn"
-                class="bg-gray-200 text-gray-800 font-semibold py-2 px-4 rounded-xl hover:bg-gray-300">
-          💾 Load Drafts
-        </button>
-      </div>
+      <!-- RIGHT: Delete / Save / Send -->
       <div class="flex gap-3 justify-end">
         <button id="debriefDeleteDraftBtn"
-                class="bg-red-600 text-white font-semibold py-2 px-4 rounded-xl hover:bg-red-700">
+          class="bg-red-600 text-white font-semibold py-2 px-4 rounded-xl hover:bg-red-700">
           Delete Draft
         </button>
         <button id="debriefSaveDraftBtn"
-                class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-xl hover:bg-blue-700">
+          class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-xl hover:bg-blue-700">
           Save Draft
         </button>
         <button id="debriefSendBtn"
-                class="bg-green-600 text-white font-semibold py-2 px-4 rounded-xl hover:bg-green-700">
+          class="bg-green-600 text-white font-semibold py-2 px-4 rounded-xl hover:bg-green-700">
           Send Debrief
         </button>
       </div>
     </div>
 
-    <!-- MESSAGE LINE (kept for accessibility; toasts show feedback) -->
-    <p id="debriefMsg" class="text-sm text-gray-500 mt-2"></p>
+    <!-- DRAFTS TABLE -->
+    <div id="debriefDraftsContainer" class="mt-8 hidden">
+      <div class="border-t pt-4">
+        <h3 class="text-lg font-semibold mb-2">💾 Saved Drafts</h3>
+        <div class="max-h-80 overflow-y-auto rounded-xl border border-gray-200">
+          <table class="min-w-full text-sm">
+            <thead class="bg-gray-100 sticky top-0">
+              <tr>
+                <th class="px-3 py-2 border">Date</th>
+                <th class="px-3 py-2 border">Student</th>
+                <th class="px-3 py-2 border">Goals</th>
+                <th class="px-3 py-2 border">Topics</th>
+                <th class="px-3 py-2 border">Grammar</th>
+                <th class="px-3 py-2 border">Vocabulary</th>
+                <th class="px-3 py-2 border">Pronunciation</th>
+                <th class="px-3 py-2 border">Homework</th>
+                <th class="px-3 py-2 border">Other</th>
+                <th class="px-3 py-2 border">Draft ID</th>
+                <th class="px-3 py-2 border">Load</th>
+              </tr>
+            </thead>
+            <tbody id="debriefDraftsTableBody"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
 
-    <!-- SAVED DRAFTS TABLE RENDER TARGET -->
-    <div id="debriefDraftsContainer" class="mt-6 hidden"></div>
   </div>
 </div>
 
